objects/Bulletin_Delivery_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bulletin Delivery Logs</relationshipLabel>
        <relationshipName>Bulletin_Delivery_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bulletin_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulletin Account</label>
        <referenceTo>Bulletin_Accounts__c</referenceTo>
        <relationshipLabel>Bulletin Delivery Logs</relationshipLabel>
        <relationshipName>Bulletin_Delivery_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Org__c</fullName>
        <defaultValue>&quot;Integrated&quot;</defaultValue>
        <label>Business Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Bulletin Delivery Logs</relationshipLabel>
        <relationshipName>Bulletin_Delivery_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defect__c</fullName>
        <formula>Old_Job_Information_ID__r.Defect_Correction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Job_Information_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Job Information ID</label>
        <referenceTo>Bulletin_Delivery_Job__c</referenceTo>
        <relationshipLabel>Bulletin Delivery Logs</relationshipLabel>
        <relationshipName>Bulletin_Delivery_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Bulletin Delivery Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BDL-{0000}</displayFormat>
        <label>Bulletin Delivery Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulletin Delivery Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>